--- a/Computational Geometry Projects.html
+++ b/Computational Geometry Projects.html
@@ -1,7 +1,7 @@
 <html>
    <title>Event Handling</title>
    <hr>
-   <applet code = "C:\Users\Ookami\workspace\Sweep Line\src\Test.java"
+   <applet code = "/Users/yingwang/Documents/Github/546/a/Sweep Line/ArtGalleryApplet.class"
       width = "300" height = "300">
    </applet>
    <hr>
